<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blacklist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="promo_label">APP DE USO RESTRINGIDO A MIEMBROS DE \'BLACKLIST\'</string>
    <string name="autorizacionverificada">AUTORIZACIÓN VERIFICADA</string>
    <string name="completa">POR FAVOR, COMPLETA CON TUS DATOS</string>
    <string name="peticion_procesada">PETICIÓN PROCESADA</string>
    <string name="bienvenido">BIENVENIDO A \'BLACKLIST\'</string>
    <string name="mail_enviado">HEMOS ENVIADO UN E-MAIL A LA CUENTA DE CORREO FACILITADA</string>
    <string name="revisa_datos">REVÍSALO PARA SABER TUS DATOS DE ACCESO</string>
    <string name="minutos_pasados">SI PASADOS UNOS MINUTOS NO RECIBES NINGÚN E-MAIL, POR FAVOR,</string>
    <string name="bebas_neue">fonts/BebasNeue.otf</string>
    <string name="logo">Logo</string>
    <string name="password">contraseña</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_ok">RegisterOkActivity</string>
    <string name="error_promo_code">Código de promotor incorrecto</string>
    <string name="ws_connection_error">Error al conectar con los servidores de Blacklists</string>
    <string name="title_activity_events_intro">EventsIntroActivity</string>
    <string name="title_activity_events_info">EventsInfoActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_code">CodeActivity</string>
    <string name="proximo_evento">PRÓXIMO EVENTO</string>
    <string name="title_activity_event_info">EventInfoActivity</string>
    <string name="title_activity_list_messages">ListMessagesActivity</string>
    <string name="title_activity_write_message">WriteMessageActivity</string>
    <string name="tab_group_activity">TabGroupActivity</string>
    <string name="invitacionesProximaFiesta">INVITACIONES PARA PRÓXIMA FIESTA</string>
    <string name="invitarOtrasPersonas">SI QUIERES, PUEDES INVITAR A OTRAS PERSONAS A ASISTIR AL PRÓXIMO EVENTO BLACKLIST</string>
    <string name="introduceMails">INTRODUCE UNO POR UNO LOS MAILS DONDE QUIERES QUE SE MANDE TU CÓDIGO DE INVITADOS</string>
    <string name="reservaRealizadaEvento">RESERVA REALIZADA PARA ESTE EVENTO</string>
    <string name="codigoAutorizacion">CÓDIGO DE AUTORIZACIÓN DE ENTRADA</string>
    <string name="mensajes">MENSAJES</string>
    <string name="escribirMensaje">ESCRIBIR MENSAJE</string>
    <string name="title_activity_message_info">MessageInfoActivity</string>
    <string name="mensaje">MENSAJE</string>
    <string name="title_activity_events_tab_group">EventsTabGroupActivity</string>
    <string name="title_activity_events_sitio">EventsSitioActivity</string>
    <string name="title_activity_events_precio">EventsPrecioActivity</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="acompanantes">ACOMPAÑANTES</string>
    <string name="vip">ESPACIO VIP EN CABINA</string>
    <string name="habitaciones">HABITACIONES</string>
    <string name="contactoEspecial"><u>CONTACTO PARA RESERVA ESPECIAL</u></string>
    <string name="title_activity_pictures_gallery">PicturesGalleryActivity</string>
    <string name="ok">Ok</string>
    <string name="name_and_surnames">Nombre y apellidos</string>
    <string name="email">E-mail</string>
    <string name="birth_year">Año de nacimiento</string>
    <string name="go_login">Go login</string>
    <string name="contact">Contacto</string>
    <string name="email_to">info@blacklistmeetings.com</string>
    <string name="email_chooser_title">Enviar Email</string>
    <string name="email_mime_type">message/rfc822</string>
    <string name="no_email_error">No hay ningún cliente de email instalado.</string>
    <string name="empty_string"></string>
    <string name="login">login</string>
    <string name="solicitar_datos">solicitar datos</string>
    <string name="login_problems">Problemas para acceder</string>
    <string name="acceder">Acceder</string>
    <string name="contactar">contactar</string>
    <string name="invitation_sended">Invitación enviada correctamente</string>
    <string name="img_download_error">Error al descargar la imagen</string>
    <string name="you">TÚ</string>
    <string name="escort">ACOMPAÑANTE</string>
    <string name="escorts">ACOMPAÑANTES</string>
    <string name="vip_space">+ ESPACIO V.I.P.</string>
    <string name="room">HABITACIÓN</string>
    <string name="rooms">HABITACIONES</string>
    <string name="plus">+</string>
    <string name="code_or_pass">Código o Password</string>
    <string name="enter_here">Introduce aquí</string>
    <string name="warning">Aviso</string>
    <string name="no_active_reservation">No tienes ninguna reserva activa</string>
    <string name="see_parties">Ver Fiestas</string>
    <string name="confirm_cancel_reservation">Estás seguro de querer anular la reserva?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="reservation_canceled">Reserva anulada correctamente</string>
    <string name="messages_no">No tienes mensajes</string>
    <string name="from">DE:</string>
    <string name="delete_message">Estás seguro de querer eliminar el mensaje?</string>
    <string name="message_deleted">Mensaje eliminado correctamente</string>
    <string name="write_here">Escribe aquí tu mensaje.\nTe constestaremos tan rápido como sea posible.</string>
    <string name="message_sended">Mensaje enviado correctamente</string>
    <string name="title_activity_carousel_demo">CarouselDemoActivity</string>
    <string name="no_messages">NO TIENES NINGÚN MENSAJE</string>
    <string name="title_activity_download_images_task">DownloadImagesTask</string>
    <string name="monday">LUNES</string>
    <string name="tuesday">MARTES</string>
    <string name="wednesday">MIÉRCOLES</string>
    <string name="thursday">JUEVES</string>
    <string name="friday">VIERNES</string>
    <string name="saturday">SÁBADO</string>
    <string name="sunday">DOMINGO</string>
    <string name="confirm_reservation">Recuerda que las reservas hechas que no sean anuladas 48h
        antes de la fiestas se tienen en cuenta como válidas.\n Si un miembro no es responsable en
        el uso de este servicio, puede ser penalizado con la imposibilidad de realizar futuras
        reservas y/o inactivación completa de su App \n Este servicio es necesario para el buen
        funcionamiento de las fiestas y se debe usar responsablemente con afán de colaboración</string>
    <string name="evento_pasado">EVENTO PASADO</string>
    <string name="evento_futuro">EVENTO FUTURO</string>
    <string name="reservar">Reservar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="loading">Procesando...</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="blacklist">Blacklist</string>

</resources>
