<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:focusableInTouchMode="false"
    android:background="@drawable/bkg">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/relativeLayoutContent">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:layout_below="@+id/imageView"
                android:id="@+id/relativeLayoutForm">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/login_name"
            android:background="@drawable/input"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_alignLeft="@+id/login_password"
            android:layout_alignRight="@+id/login_password"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:textSize="14dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/login_password"
            android:background="@drawable/input"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_alignTop="@+id/login_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:cursorVisible="false"
            android:hint="@string/password"
            android:ellipsize="end"
            android:textSize="14dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"/>

    <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:id="@+id/login_ok"
            android:background="@drawable/button_ok"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/login"
            android:onClick="login"/>
</RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:layout_below="@+id/relativeLayoutForm"
                android:id="@+id/relativeLayout">

            <ImageButton
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:id="@+id/buttonSolicitar"
                    android:background="@drawable/button_solicitar"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="12dp"
                    android:onClick="goToRegister"
                    android:contentDescription="@string/solicitar_datos"/>
            <ImageButton
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:id="@+id/buttonProblemas"
                    android:background="@drawable/button_problemas"
                    android:layout_toRightOf="@+id/buttonSolicitar"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="problems"
                    android:contentDescription="@string/login_problems"/>

            </RelativeLayout>

</RelativeLayout>

</RelativeLayout>