<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bkg"
                android:focusableInTouchMode="false">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/relativeLayoutGeneral">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageViewBoxTitol"
            android:background="@drawable/black_box_background"
            android:id="@+id/relativeLayoutBackGround"
            android:layout_marginTop="-20dp">


            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/relativeLayoutContent"
                    android:layout_centerHorizontal="true">


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invitarOtrasPersonas"
                        android:id="@+id/textViewInvitarOtrasPersonas"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:textColor="#00ccb6"
                        android:layout_marginTop="20dp"
                        android:textSize="14dp"
                        android:textIsSelectable="false"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/introduceMails"
                        android:gravity="center"
                        android:id="@+id/textViewIntroduceMails"
                        android:layout_below="@+id/textViewInvitarOtrasPersonas"
                        android:layout_centerHorizontal="true"
                        android:textColor="#ffffff"
                        android:layout_marginTop="20dp"
                        android:textSize="17dp"
                        android:textIsSelectable="false"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewIntroduceMails"
                        android:textColor="#ffffff"
                        android:id="@+id/inputInvite"
                        android:background="@drawable/input_full_width"
                        android:gravity="center_vertical"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:cursorVisible="false"
                        android:hint="@string/enter_here"
                        android:ellipsize="end"/>
                <ImageButton
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:id="@+id/button"
                        android:background="@drawable/and_ok_invitations"
                        android:layout_alignParentEnd="false"
                        android:layout_alignParentStart="false"
                        android:layout_below="@+id/inputInvite"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:onClick="sendInvitation"
                        />
            </RelativeLayout>

    </RelativeLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewBoxTitol"
                android:background="@drawable/and_bkg_title_invitations"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invitacionesProximaFiesta"
                android:id="@+id/textViewInvitacionesProximaFiesta"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textIsSelectable="false"/>
            </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>